<resources>
    <string name="app_name">ShieldX</string>
    <string name="api_key">AIzaSyDABRoUPJwz3yMOpwWdr0S24YRaqoVrTH0</string>
    <string name="journey_guardianAlerted">Guardian Alerted!</string>
    <string name="guardianAdded_userInDanger">is in DANGER!</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="confirmPassword_text">Confirm Password</string>
    <string name="email_text">Email</string>
    <string name="phone_text">Phone Number</string>
    <string name="login_text">LOGIN</string>
    <string name="signUp_text">Sign Up</string>
    <string name="signIn_text">Sign In</string>
    <string name="firstname_text">First Name</string>
    <string name="lastname_text">Last Name</string>
    <string name="setting">Settings</string>
    <string name="watermark">Start your journey with us</string>
    <string name="followerDisclaimer">Make sure follower\'s email Id that he/she used during signing up to ShieldX is added
    in your contact as well.</string>
    <string name="tagline">For everyone\'s safety</string>
    <string name="search_elements">search_elements</string>
    <string name="hello">Hello, </string>
    <string name="userName">John</string>
    <string name="userEmail">john.nash@gmail.com</string>
    <string name="contacts">Add Follower</string>
    <string name="pastActivities">Past Journey</string>
    <string name="follower">My Followers</string>
    <string name="newActivity">New Activity</string>
    <string name="addFollower">Add Follower</string>
    <string name="destination">Enter destination</string>
    <string name="expectedTime">Expected journey duration</string>
    <string name="startActivity">START ACTIVITY</string>
    <string name="addToFavourite">ADD TO FAVOURITE</string>
    <string name="activityType">Activity Type</string>
    <string name="title_activity_side_bar">SideBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_start2">StartActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="msg_token_fmt" />
    <string name="default_notification_channel_id" />
    <string name="addFromMyFollower">Add from My Follower</string>
    <string name="OR">OR</string>
    <string name="addFromContact">Add From Contact</string>
    <string name="addNewFollower">Add New Follower</string>
    <string name="enterName">Enter Follower Name</string>
    <string name="enterNumber">Enter Follower Phone number</string>
    <string name="enterEmail">Enter Follower Email</string>
    <string name="Save">SAVE</string>
    <string name="newUser">Are you a New User ?</string>
    <string name="nightMode">Night Mode</string>
    <string name="locationTrackingaccess">Allow Location Tracking</string>
    <string name="phonebookAccess">Allow PhoneBook access</string>
    <string name="energySaver">Save energy</string>
    <string name="multiLanguageSupport">Change language</string>
    <string name="aboutUs">About Us</string>
    <string name="deleteTracking">Delete tracking</string>
    <string name="logout">Logout</string>
</resources>