<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:drawableTopCompat="@drawable/ic_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <RelativeLayout
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:text="@string/signIn_text"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signin"
            android:layout_marginBottom="5sp"
            android:background="#20ffffff"
            android:drawableLeft="@drawable/ic_baseline_perm_identity_24"
            android:drawablePadding="20dp"
            android:hint="@string/username_text"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="#33FFFFFF"
            android:translationY="-20dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="#20ffffff"
            android:drawableLeft="@drawable/ic_baseline_lock_open_24"
            android:drawablePadding="20dp"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="#33FFFFFF"
            android:translationY="-20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/white"
            android:text="@string/login_text"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:translationY="-20dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signIn"
        android:layout_marginTop="60sp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/newUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newUser"
            android:textColor="@color/accentGrey" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/newUser"
            android:backgroundTint="@color/white"
            android:text="@string/signUp_text"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>