<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:drawableTopCompat="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        />

    <TextView
        android:id="@+id/signin"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="Sign in"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@id/signin"
        android:background="#20ffffff"
        android:hint="@string/username_text"
        android:textColorHint="#33FFFFFF"
        android:textColor="@color/white"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_perm_identity_24"
        android:drawablePadding="20dp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_margin="0dp"
        android:background="#20ffffff"
        android:hint="@string/password_text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="#33FFFFFF"
        android:drawableLeft="@drawable/ic_baseline_lock_open_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/login_text"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbtn"
        android:layout_centerHorizontal="true"
        android:layout_margin="1dp"
        android:text="Forgot Password?"
        android:textColor="#95FFFFFF" />


</RelativeLayout>