<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFollower">

    <RelativeLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_back" />
        <TextView
            android:id="@+id/testHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/addFollower"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"/>


        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_menu"
            android:layout_alignParentEnd="true"
            app:tint="@color/white" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintBottom_toTopOf="@+id/followerOptions">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                tools:listitem="@layout/item_contact" />
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/followerOptions"
            android:layout_width="match_parent"
            android:layout_height="313dp"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView">

            <RelativeLayout
                android:id="@+id/fromMyFollower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/trending_background"
                android:padding="5dp"
                app:layout_constraintBottom_toTopOf="@+id/fromContact"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/addFromMyFollower"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/addFromMyFollower"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_add"
                    app:tint="@color/white" />
            </RelativeLayout>

            <TextView
                android:id="@+id/extraOR"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:gravity="center"
                android:text="@string/OR"
                android:textColor="@color/colorGrey"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/fromContact"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fromMyFollower" />

            <RelativeLayout
                android:id="@+id/fromContact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/trending_background"
                android:padding="5dp"
                app:layout_constraintBottom_toTopOf="@+id/fromNewFoollower"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fromMyFollower">

                <TextView
                    android:id="@+id/addFromContactText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/addFromContact"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/addFromContact"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_add"
                    app:layout_constraintStart_toEndOf="@+id/addFromContactText"
                    app:tint="@color/white" />
            </RelativeLayout>

            <TextView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:text="@string/OR"
                android:textColor="@color/colorGrey"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/fromNewFoollower"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fromContact" />

            <RelativeLayout
                android:id="@+id/fromNewFoollower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/trending_background"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fromContact">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/addNewFollower"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/addfromNewFoollower"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_add"
                    app:tint="@color/white" />
            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>